snapshots/care/data4life/hc-util-sdk-kmp/error/1.11.0-SNAPSHOT/maven-metadata.xml.sha512
5182f22f607ca489d194a25654ed74592113f9171452e663b67d3f92f629cd5cde5082323d90b06975535d2aa082084d3e7b63f0ab8070cedc9214d8fbe4f746